clang/test/BSC/Positive/Trait/r1/definition_18/definition_18.cbs
// RUN: %clang %s -o %t.output
// RUN: %t.output
// expected-no-diagnostics

trait F {
  int foo(This* this);
};

int int::foo(int* this) {
  return 0;
}

impl trait F for int;

trait F* get() {
  int a = 1;
  return &a;
};

int main() {
  trait F* f = get();
  return 0;
}
