clang/test/BSC/Negative/Ownership/Borrow/borrow_trait/borrow_trait.cbs
// RUN: %clang_cc1 -verify %s
// expected-no-diagnostics

_Trait T {
  static int f(This* this);
};

int int::f(int* this) {
  return *this;
}

_Impl _Trait T for int;

int main() {
  int a = 1;
  int* t = &a;
  _Trait T* _Borrow p = &_Mut *t;
  a = 2;
  t = &a;
  return 0;
}